Sensors: Port SensorTreeModel to std::map so we can use a custom compare

Currently, the tree ends up being sorted with numbers sorted as
characters. Since the sorting happens in the map, if we want to sort
things differently we need to override the sorting function. QMap does
not support that so use std::map instead with a custom compare object.

BUG: 440310